Bug 104005 - [sklgt4e] GPU hangs in Car_Chase
Summary: [sklgt4e] GPU hangs in Car_Chase
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Kenneth Graunke
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-01 00:12 UTC by Mirlan
Modified: 2017-12-12 19:09 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Gpu card error state (27.15 KB, text/plain)
2017-12-01 00:12 UTC, Mirlan
Details

Description Mirlan 2017-12-01 00:12:20 UTC
Created attachment 135849 [details]
Gpu card error state

The following commit is causing GPU hang in Car Chase

commit 8ecdbb613609e58094af435a45c357aebce5ff66
Refs: 17.3-branchpoint-607-g8ecdbb6136
Author:     Kenneth Graunke <kenneth@whitecape.org>
AuthorDate: Wed Nov 8 10:56:00 2017 -0800
Commit:     Kenneth Graunke <kenneth@whitecape.org>
CommitDate: Thu Nov 9 12:34:11 2017 -0800

    i965: Pretend there are 4 subslices for compute shader threads on Gen9+.

    Similar to what we did for pixel shader threads - see gen_device_info.c.

    We don't want to bump the actual Maximum Number of Threads though, so
    we adjust it here.  For pixel shaders, we don't use max_wm_threads, so
    we could just bump it globally.

    Supposedly fixes Piglit tests:
    arb_gpu_shader_int64/execution/built-in-functions/cs-op-div-i64vec3-int64_t
    arb_gpu_shader_int64/execution/built-in-functions/cs-op-div-i64vec4-int64_t
    arb_gpu_shader_int64/execution/built-in-functions/cs-op-div-u64vec4-uint64_t
Comment 1 Kenneth Graunke 2017-12-12 19:09:37 UTC
Hi Mirlan,

This should be fixed in master by:

commit b1ce812c514750f8d94a6813df351a9e5430825d
Author: Kevin Rogovin <kevin.rogovin@intel.com>
Date:   Tue Dec 12 14:17:27 2017 +0200

    i965: compute scratch space size correctly for Gen9+
    
    Fixes: 8ecdbb61360 "i965: Pretend there are 4 subslices for compute shader threads on Gen9+."
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=104005
    Signed-off-by: Kevin Rogovin <kevin.rogovin@intel.com>
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>
    Tested-by: Eero Tamminen <eero.t.tamminen@intel.com>

If not, feel free to reopen.  Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.